# Personal_Expense_Tracker

./: db.sqlite3  pyproject.toml
.github/workflows/: main.yml
config/: settings.py
home/: admin.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_rename_addmoneyinfo_addmoney_info.py
