[tool.poetry]
name = "ExpenseTracker"
version = "0.1.0"
description = "This is personal Expense Tracker"
authors = ["WiderAI <mukhsinmukhtorov02@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = ">=2.2,<3.3"
djongo = "^1.3.6"
djangorestframework = "^3.15.1"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
